add setup PHP step to CI config file

--- a/.github/workflow/myproject.yml
+++ b/.github/workflow/myproject.yml
@@ -1,14 +1,22 @@
 name: blog project
 
-on:
-  push:
-    branches: main
-  pull_request:
-    branches: main
+on: [push]
 
 jobs:
   test:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: true
+      matrix:
+        php: [8.1]
+
     steps:
       - name: checkout
         uses: actions/checkout@v4
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php }}
+          extensions: json, dom, curl, libxml, mbstring
+          coverage: none
