--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,20 +3,32 @@ name: blog project
 on: [push]
 
 jobs:
-  test:
+  laravel-tests:
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: true
-      matrix:
-        php: [8.1]
 
     steps:
-      - name: checkout
+      - name: Checkout
         uses: actions/checkout@v4
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: ${{ matrix.php }}
-          extensions: json, dom, curl, libxml, mbstring
+          php-version: '8.1'
+          extensions: mbstring, bcmath, mysql
           coverage: none
+
+      - name: Dependency install
+        run: composer install --prefer-dist --no-interaction --no-scripts --no-progress
+
+      - name: Generate application key
+        run: php artisan key:generate
+  
+      - name: Set up database
+        run: |
+          sudo mysql -e 'CREATE DATABASE blog;'
+  
+      - name: Run migrations
+        run: php artisan migrate
+
+      - name: Feature test
+        run: php artisan test
