add extra step to install mysql

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,12 +22,13 @@ jobs:
 
       - name: config env file
         run: cp .env.example .env
-        
+
       - name: Generate application key
         run: php artisan key:generate
   
       - name: Set up database
         run: |
+          sudo apt-get install mysql-server
           sudo mysql -e 'CREATE DATABASE blog;'
   
       - name: Run migrations
