--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Set up database
         run: |
           sudo systemctl start mysql
-          sudo systemctl status mysql
+          mysql -u root
           sudo mysql -e 'CREATE DATABASE blog;'
   
       - name: Run migrations
