--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Set up database
         run: |
           sudo systemctl start mysql
-          mysql -u root -p 'Mypassword' -e 'CREATE DATABASE blog;'
+          sudo mysql -e 'CREATE DATABASE blog;'
   
       - name: Run migrations
         run: php artisan migrate
