--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,14 @@ jobs:
       - name: Set up database
         run: |
           sudo systemctl start mysql
-          sudo mysql -e 'CREATE DATABASE blog;'
+          sudo systemctl status mysql
+          
+      - name: Create MySQL User and Database
+        run: |
+          mysql -u root -e "CREATE USER 'github'@'localhost' IDENTIFIED BY '${{ secrets.MYSQL_PASSWORD }}';"
+          mysql -u root -e "GRANT ALL PRIVILEGES ON *.* TO 'github'@'localhost' WITH GRANT OPTION;"
+          mysql -u root -e "FLUSH PRIVILEGES;"
+          mysql -u github -p${{ secrets.MYSQL_PASSWORD }} -e "CREATE DATABASE blog;"
   
       - name: Run migrations
         run: php artisan migrate
