--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,13 +30,7 @@ jobs:
         run: |
           sudo systemctl start mysql
           sudo systemctl status mysql
-          
-      - name: Create MySQL User and Database
-        run: |
-          mysql -u root -e "CREATE USER 'github'@'localhost' IDENTIFIED BY '${{ secrets.MYSQL_PASSWORD }}';"
-          mysql -u root -e "GRANT ALL PRIVILEGES ON *.* TO 'github'@'localhost' WITH GRANT OPTION;"
-          mysql -u root -e "FLUSH PRIVILEGES;"
-          mysql -u github -p${{ secrets.MYSQL_PASSWORD }} -e "CREATE DATABASE blog;"
+          mysql -h 127.0.0.1 --port 8888 -u root -p -e 'CREATE DATABASE IF NOT EXISTS blog;'
   
       - name: Run migrations
         run: php artisan migrate
