--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,15 @@ on: [push]
 jobs:
   laravel-tests:
     runs-on: ubuntu-latest
+    services:
+      mysql:
+        image: mysql:5.7
+        env:
+          MYSQL_ROOT_PASSWORD: root_password
+          MYSQL_DATABASE: blog
+        ports:
+          - 3306:3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s
 
     steps:
       - name: Checkout
@@ -28,9 +37,9 @@ jobs:
   
       - name: Set up database
         run: |
-          sudo systemctl stop mysql
-          sudo mysqld_safe --skip-grant-tables &
-          mysql -u root
+          sudo systemctl start mysql
+          sudo mysql -e "ALTER USER 'root'@'localhost' IDENTIFIED WITH 'mysql_native_password' BY 'root_password';"
+          sudo mysql -u root -proot_password -e "CREATE DATABASE blog;"
   
       - name: Run migrations
         run: php artisan migrate
