--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,8 +38,10 @@ jobs:
       - name: Set up database
         run: |
           sudo systemctl start mysql
-          sudo mysql -e "ALTER USER 'root'@'localhost' IDENTIFIED WITH 'mysql_native_password' BY 'root_password';"
-          sudo mysql -u root -proot_password -e "CREATE DATABASE blog;"
+          sudo systemctl status mysql
+  
+      - name: Create database 
+        run: php artisan app:create-database
   
       - name: Run migrations
         run: php artisan migrate
