--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
         run: |
           sudo systemctl start mysql
           sudo systemctl status mysql
-          sudo mysql --user=root --password=root
+          sudo mysql -u root -p'root' -e 'CREATE DATABASE blog;'
   
       - name: Run migrations
         run: php artisan migrate
