deploy step has been added & fix error

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,12 @@ jobs:
       - name: Generate application key
         run: php artisan key:generate
   
+      - name: Set up database
+        run: |
+          sudo systemctl start mysql
+          sudo systemctl status mysql
+          sudo mysql -u root -p'root' -e 'CREATE DATABASE blog;'
+  
       - name: Run migrations
         run: php artisan migrate
 
