--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,4 +50,6 @@ jobs:
       - name: Deploy to Vapor 
         env:
           VAPOR_API_TOKEN: ${{ secrets.VAPOR_API_TOKEN }}
-        run: vapor deploy production --no-interaction
+        run: |
+          composer global require laravel/vapor-cli
+          vapor deploy production --no-interaction
